week day task geenrated

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,21 @@ header {
     text-align: center;
 }
 
+* {
+    margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    --headerFontSize: 2rem;   
+    --headerPadding: 0.5rem; 
+    --footerFontSize: 1rem;
+    --footerPadding: 1rem;
+    --mainHeight: calc(
+        100vh 
+        - var(--headerFontSize) 
+        - (2 * var(--headerPadding))
+        - var(--footerFontSize) 
+        - (2 * var(--footerPadding))
+    );
+}
 main {
     background-color: lightblue;
     font-size: 1.5rem;
@@ -67,4 +82,53 @@ footer {
     text-align: right;
     padding: var(--headerPadding);
     font-weight: bold;
+}
+
+.day{
+    height: calc(var(--mainHeight)/3);
+}
+
+.day:nth-of-type(even) {
+    background-color: lightgoldenrodyellow;
+}
+
+.circle-container {
+    display: flex;
+    align-items: center;
+    font-size: 1.7rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    border-bottom: 0.1rem solid MediumSlateBlue;
+    width: fit-content;
+    margin: 1rem 1rem;
+    height: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.circle-container.checked {
+    text-decoration: line-through;
+    text-decoration-color: MediumSlateBlue;
+}
+
+.circle {
+    height: 1rem; 
+    width: 1rem; 
+    background: white;        
+    border-radius: 50%;
+    border: 0.2rem solid MediumSlateBlue;
+    cursor: pointer;
+    margin-right: 1rem;
+}
+.circle:hover {
+    box-shadow: 0 0 0.3rem MediumSlateBlue;
+}
+
+.circle-container.checked .circle {
+    background: MediumSlateBlue;
+}
+
+.tasks {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
